chore(locale): add all missed en-US locales

--- a/packages/plugins/@nocobase/plugin-acl/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-acl/src/locale/en-US.json
@@ -3,5 +3,9 @@
   "The user role does not exist. Please try signing in again": "The user role does not exist. Please try signing in again",
   "New role": "New role",
   "Permissions": "Permissions",
-  "Desktop menu": "Desktop menu"
+  "Roles & Permissions": "Roles & Permissions",
+  "General": "General",
+  "Desktop menu": "Desktop menu",
+  "Plugin settings": "Plugin settings",
+  "Data sources": "Data sources"
 }
