--- a/packages/plugins/@nocobase/plugin-async-task-manager/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-async-task-manager/src/locale/en-US.json
@@ -1,5 +1,45 @@
 {
-  "Export {collection} attachments": "{collection} attachments export",
-  "Export {collection} data": "{collection} data export",
-  "Import {collection} data": "{collection} data import"
+  "Export": "Export",
+  "Import": "Import",
+  "Data": "Data",
+  "Task": "Task",
+  "Status": "Status",
+  "Actions": "Actions",
+  "Created at": "Created at",
+  "Type": "Type",
+  "Waiting": "Waiting",
+  "Processing": "Processing",
+  "Completed": "Completed",
+  "Failed": "Failed",
+  "Cancelled": "Cancelled",
+  "Cancel": "Cancel",
+  "Cancelling": "Cancelling",
+  "Download": "Download",
+  "Error details": "Error details",
+  "Confirm cancel": "Confirm cancel",
+  "Confirm cancel description": "Confirm cancel description",
+  "Confirm": "Confirm",
+  "Task cancelled": "Task cancelled",
+  "Task completed": "Task completed",
+  "Task failed": "Task failed",
+  "Error Details": "Error Details",
+  "Close": "Close",
+  "Error code": "Error code",
+  "Unknown error": "Unknown error",
+  "OK": "OK",
+  "Import result": "Import result",
+  "Import completed": "Import completed",
+  "Import summary": "Import summary",
+  "Import details": "Import details",
+  "Imported": "Imported",
+  "Successfully imported": "Successfully imported",
+  "Updated records": "Updated records",
+  "Skipped records": "Skipped records",
+  "Total records": "Total records",
+  "View result": "View result",
+  "ImportResult": "ImportResult",
+  "Task result": "Task result",
+  "Export {collection} attachments": "Export {collection} attachments",
+  "Export {collection} data": "Export {collection} data",
+  "Import {collection} data": "Import {collection} data"
 }
