--- a/packages/plugins/@nocobase/plugin-backup-restore/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-backup-restore/src/locale/en-US.json
@@ -1,5 +1,11 @@
 {
   "Backup file": "Backup file",
+  "Select Import data": "Select Import data",
+  "Select Import Plugins": "Select Import Plugins",
+  "Select User Collections": "Select User Collections",
+  "Basic Data": "Basic Data",
+  "Optional Data": "Optional Data",
+  "User Data": "User Data",
   "System metadata": "System metadata",
   "System config": "System config",
   "Business data": "Business data",
@@ -14,6 +20,7 @@
   "Start backup": "Start backup",
   "Start restore": "Start restore",
   "Backed up successfully": "Backed up successfully",
+  "Deleted successfully": "Deleted successfully",
   "Plugin": "Plugin",
   "file uploaded successfully": "file uploaded successfully",
   "file upload failed": "file upload failed",
@@ -26,19 +33,18 @@
   "Backing up": "Backing up",
   "Refresh": "Refresh",
   "Delete": "Delete",
-  "Deleted successfully": "Deleted successfully",
-  "required.title": "Required data",
-  "user.title": "User data",
-  "log.title": "Log data",
-  "custom.title": "Custom collection data",
-  "skipped.title": "Skipped data",
-  "unknown.title": "Unknown",
-  "third-party.title": "Third-party service information",
-  "required.description": "Required data",
-  "user.description": "User data",
-  "log.description": "Log data",
-  "custom.description": "Custom collection data",
-  "skipped.description": "Skipped data",
-  "unknown.description": "Data without configured dump rules",
-  "third-party.description": "Third-party service information"
+  "required.title": "required.title",
+  "user.title": "user.title",
+  "log.title": "log.title",
+  "custom.title": "custom.title",
+  "skipped.title": "skipped.title",
+  "unknown.title": "unknown.title",
+  "third-party.title": "third-party.title",
+  "required.description": "required.description",
+  "user.description": "user.description",
+  "log.description": "log.description",
+  "custom.description": "custom.description",
+  "skipped.description": "skipped.description",
+  "unknown.description": "unknown.description",
+  "third-party.description": "third-party.description"
 }
