--- a/packages/plugins/@nocobase/plugin-charts/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-charts/src/locale/en-US.json
@@ -6,17 +6,56 @@
   "Actions": "Actions",
   "Title": "Title",
   "Enable": "Enable",
-  "SAML manager": "SAML manager",
-  "SAML Providers": "SAML Providers",
-  "Redirect url": "Redirect url",
-  "SP entity id": "SP entity id",
-  "Add provider": "Add",
-  "Edit provider": "Edit",
-  "Client id": "Client id",
-  "Entity id or issuer": "Entity id or issuer",
-  "Login Url": "Login Url",
-  "Public cert": "Public cert",
-  "Delete provider": "Delete",
-  "Are you sure you want to delete it?": "Are you sure you want to delete it?",
-  "Sign in button name, which will be displayed on the sign in page": "Sign in button name, which will be displayed on the sign in page"
+  "Chart": "Chart",
+  "Charts": "Charts",
+  "Queries": "Queries",
+  "Select chart query": "Select chart query",
+  "Select query data": "Select query data",
+  "Type": "Type",
+  "Chart type": "Chart type",
+  "Chart title": "Chart title",
+  "Basic charts": "Basic charts",
+  "More charts": "More charts",
+  "Chart config": "Chart config",
+  "Add query": "Add query",
+  "Edit query": "Edit query",
+  "Invalid JSON format,must be an object array.": "Invalid JSON format,must be an object array.",
+  "Area": "Area",
+  "Bar": "Bar",
+  "Column": "Column",
+  "Funnel": "Funnel",
+  "Line": "Line",
+  "Pie": "Pie",
+  "Radar": "Radar",
+  "Scatter": "Scatter",
+  "Edit chart block": "Edit chart block",
+  "Chart preview": "Chart preview",
+  "Delete queries": "Delete queries",
+  "Delete query": "Delete query",
+  "Add chart query": "Add chart query",
+  "Add SQL query": "Add SQL query",
+  "Add JSON query": "Add JSON query",
+  "Data preview": "Data preview",
+  "Category axis / Dimension": "Category axis / Dimension",
+  "Value axis / Metrics": "Value axis / Metrics",
+  "JSON config": "JSON config",
+  "Json config references": "Json config references",
+  "Create chart block": "Create chart block",
+  "Invalid JSON format": "Invalid JSON format",
+  "Json config references: ": "Json config references: ",
+  "Sector Angle / Metric": "Sector Angle / Metric",
+  "Sector label / Dimensional": "Sector label / Dimensional",
+  "Color legend / Dimensional": "Color legend / Dimensional",
+  "Funnel Layer Width/Metrics": "Funnel Layer Width/Metrics",
+  "Branch Tags/Dimensions": "Branch Tags/Dimensions",
+  "Branch Length/Metrics": "Branch Length/Metrics",
+  "Please check the chart config": "Please check the chart config",
+  "1 「time」or 「Ordered Noun」 field,1 「Numerical」 field,1 「Unordered Noun」 field (optional)": "1 「time」or 「Ordered Noun」 field,1 「Numerical」 field,1 「Unordered Noun」 field (optional)",
+  "1 「time」 or 「ordered noun」 field, 1 「value」 field, 0~ 1 「unordered noun」": "1 「time」 or 「ordered noun」 field, 1 「value」 field, 0~ 1 「unordered noun」",
+  "1 「time」 or 「ordered noun」 field, 1 「value」 field, 0 to 1 「unordered noun」": "1 「time」 or 「ordered noun」 field, 1 「value」 field, 0 to 1 「unordered noun」",
+  "1 「Unordered Noun」 field, 1 「Numeric」 field": "1 「Unordered Noun」 field, 1 「Numeric」 field",
+  "1 「Time」 or 「Order Noun」 field, 1 「Value」 field": "1 「Time」 or 「Order Noun」 field, 1 「Value」 field",
+  "1~ 2 「Unordered Noun」 fields, 1 「Numeric」 field": "1~ 2 「Unordered Noun」 fields, 1 「Numeric」 field",
+  "1 「Numeric」 field, 0~ 1 「Unordered Noun」 field": "1 「Numeric」 field, 0~ 1 「Unordered Noun」 field",
+  "Chart (Old)": "Chart (Old)"
 }
