--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/en-US.json
@@ -35,11 +35,11 @@
   "Type": "Type",
   "Add field": "Add field",
   "Add chart": "Add chart",
-  "xField": "X field",
-  "yField": "Y field",
-  "seriesField": "Series field",
-  "angleField": "Angle field",
-  "colorField": "Color field",
+  "xField": "xField",
+  "yField": "yField",
+  "seriesField": "seriesField",
+  "angleField": "angleField",
+  "colorField": "colorField",
   "Line": "Line",
   "Area": "Area",
   "Column": "Column",
@@ -72,6 +72,7 @@
   "isPercent": "isPercent",
   "isGroup": "isGroup",
   "smooth": "smooth",
+  "Collapse": "Collapse",
   "Expand": "Expand",
   "Current filter": "Current filter",
   "Add custom field": "Add custom field",
@@ -86,7 +87,7 @@
   "Add transformation": "Add transformation",
   "Container": "Container",
   "Show border": "Show border",
-  "Transformation tip": "Fields allow multiple transformations, applied sequentially. Pay attention to data type changes after each transformation. Drag-and-drop functionality enables adjustment of transformation order.",
+  "Transformation tip": "Transformation tip",
   "Type conversion": "Type conversion",
   "Transformer": "Transformer",
   "Size": "Size",
