--- a/packages/plugins/@nocobase/plugin-field-attachment-url/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-field-attachment-url/src/locale/en-US.json
@@ -1,1 +1,4 @@
-{}
+{
+  "Which file collection should it be uploaded to": "Which file collection should it be uploaded to",
+  "Attachment (URL)": "Attachment (URL)"
+}
