--- a/packages/plugins/@nocobase/plugin-graph-collection-manager/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-graph-collection-manager/src/locale/en-US.json
@@ -11,5 +11,6 @@
   "Entity relationship only": "Entity relationship only",
   "Inheritance relationship only": "Inheritance relationship only",
   "Graphical interface": "Graphical interface",
+  "Auto layout": "Auto layout",
   "Selection": "Selection"
 }
