--- a/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/en-US.json
@@ -7,5 +7,8 @@
   "Custom domain": "Custom domain",
   "Manage applications": "Manage applications",
   "Standalone deployment": "Standalone deployment",
-  "Auto start": "Auto start"
+  "Auto start": "Auto start",
+  "Start mode": "Start mode",
+  "Start on first visit": "Start on first visit",
+  "Start with main application": "Start with main application"
 }
