--- a/packages/plugins/@nocobase/plugin-notification-manager/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-notification-manager/src/locale/en-US.json
@@ -4,10 +4,8 @@
   "Channels": "Channels",
   "Channel": "Channel",
   "Channel title": "Channel title",
-  "Channel name": "Channel name",
-  "Channel display name": "Channel display name",
   "Content": "Content",
-  "Receivers":"Receivers",
+  "Receivers": "Receivers",
   "Receiver": "Receiver",
   "Add new receiver": "Add new receiver",
   "Templates": "Templates",
@@ -16,22 +14,26 @@
   "Description": "Description",
   "Notification type": "Notification type",
   "Actions": "Actions",
+  "Channel name": "Channel name",
+  "Channel display name": "Channel display name",
   "Configure": "Configure",
   "Add new": "Add new",
-  "Trigger From": "Trigger From",
+  "Trigger from": "Trigger from",
   "Status": "Status",
-  "Edit": "Edit",
-  "Created At": "Created At",
+  "Created at": "Created at",
   "Delete record": "Delete record",
   "Are you sure you want to delete it?": "Are you sure you want to delete it?",
   "Deleted successfully!": "Deleted successfully!",
   "Add user": "Add user",
+  "Edit": "Edit",
   "Select users": "Select users",
   "Query users": "Query users",
   "Receiver type": "Receiver type",
+  "Manual input": "Manual input",
+  "Select user": "Select user",
   "No channel enabled yet": "No channel enabled yet",
   "Success": "Success",
-  "Fail": "Fail",
+  "Failure": "Failure",
   "Reason": "Reason",
   "Failed reason": "Failed reason",
   "Log detail": "Log detail",
