--- a/packages/plugins/@nocobase/plugin-theme-editor/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/locale/en-US.json
@@ -1,11 +1,23 @@
 {
-  "Theme": "Theme",
-  "Local": "Local",
+  "Theme editor": "Theme editor",
+  "Themes": "Themes",
   "Dark theme": "Dark theme",
   "Optional": "Optional",
   "Non-optional": "Non-optional",
   "Current": "Current",
   "Default": "Default",
+  "Delete theme": "Delete theme",
+  "Deletion is unrecoverable. Confirm deletion?": "Deletion is unrecoverable. Confirm deletion?",
+  "Deleted successfully": "Deleted successfully",
+  "Updated successfully": "Updated successfully",
+  "User selectable": "User selectable",
+  "Default theme": "Default theme",
+  "Add new theme": "Add new theme",
+  "Edit based on current theme": "Edit based on current theme",
+  "Create a brand new theme": "Create a brand new theme",
+  "Dark": "Dark",
+  "Compact": "Compact",
+  "Compact dark": "Compact dark",
   "Theme Editor": "Theme Editor",
   "Save": "Save",
   "Close": "Close",
