--- a/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/en-US.json
@@ -13,6 +13,9 @@
   "Success": "Success",
   "Failed": "Failed",
   "Authenticator": "Authenticator",
+  "dingtalk": "dingtalk",
+  "wecom": "wecom",
+  "default": "default",
   "Retry": "Retry",
   "No user data source plugin installed": "No user data source plugin installed",
   "View documentation": "View documentation",
