--- a/packages/plugins/@nocobase/plugin-action-bulk-update/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-action-bulk-update/src/locale/en-US.json
@@ -1,5 +1,6 @@
 {
   "Bulk update": "Bulk update",
   "After successful bulk update": "After successful bulk update",
-  "Please select the records to be updated": "Please select the records to be updated"
+  "Please select the records to be updated": "Please select the records to be updated",
+  "Entire collection": "Entire collection"
 }
