--- a/packages/plugins/@nocobase/plugin-action-import/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/locale/en-US.json
@@ -3,15 +3,16 @@
   "File size cannot exceed 10M": "File size cannot exceed 10M",
   "Please upload the file of Excel": "Please upload the file of Excel",
   "Import Data": "Import Data",
+  "Import": "Import",
   "Start import": "Start import",
-  "Import explain": "Guide",
+  "Import explain": "Import explain",
   "Download template": "Download template",
   "Step 1: Download template": "Step 1: Download template",
   "Step 2: Upload Excel": "Step 2: Upload Excel",
   "Step 3: Import options": "Step 3: Import options",
-  "Download tips": "- Download the template and fill in the data according to the format \r\n - Import only the first worksheet \r\n - Do not change the header of the template to prevent import failure",
-  "Import warnings": "You can import up to {{limit}} rows of data at a time, any excess will be ignored.",
-  "Upload placeholder": "Drag and drop the file here or click to upload, file size should not exceed 80M",
+  "Download tips": "Download tips",
+  "Import warnings": "Import warnings",
+  "Upload placeholder": "Upload placeholder",
   "Excel data importing": "Excel data importing",
   "{{successCount}} records have been successfully imported": "{{successCount}} records have been successfully imported",
   "To download the failure data": "To download the failure data",
@@ -19,6 +20,7 @@
   "Done": "Done",
   "Yes": "Yes",
   "No": "No",
+  "Please select": "Please select",
   "Field {{fieldName}} does not exist": "Field {{fieldName}} does not exist",
   "can not find value": "can not find value",
   "password is empty": "password is empty",
@@ -28,15 +30,22 @@
   "Illegal percentage format": "Illegal percentage format",
   "Imported template does not match, please download again.": "Imported template does not match, please download again.",
   "another import action is running, please try again later.": "another import action is running, please try again later.",
-  "Please select": "Please select",
   "Custom column title": "Custom column title",
   "Field description": "Field description",
-  "Field description placeholder": "Enter field description",
+  "Field description placeholder": "Field description placeholder",
   "Columns configuration is empty": "Columns configuration is empty",
   "Field not found: {{field}}": "Field not found: {{field}}",
   "Headers not found. Expected headers: {{headers}}": "Headers not found. Expected headers: {{headers}}",
   "Header mismatch at column {{column}}: expected \"{{expected}}\", but got \"{{actual}}\"": "Header mismatch at column {{column}}: expected \"{{expected}}\", but got \"{{actual}}\"",
   "No data to import": "No data to import",
   "Failed to import row {{row}}, {{message}}, row data: {{data}}": "Failed to import row {{row}}, {{message}}, row data: {{data}}",
-  "import-error": "Failed to import row {{rowIndex}}, row data: {{rowData}}, cause: {{causeMessage}}"
+  "import-error": "import-error",
+  "Import completed": "Import completed",
+  "Successfully imported": "Successfully imported",
+  "Updated records": "Updated records",
+  "Skipped records": "Skipped records",
+  "Total records": "Total records",
+  "View result": "View result",
+  "ImportResult": "ImportResult",
+  "Task result": "Task result"
 }
