--- a/packages/plugins/@nocobase/plugin-auth-sms/src/server/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-auth-sms/src/server/locale/en-US.json
@@ -4,5 +4,6 @@
   "The password is incorrect, please re-enter": "The password is incorrect, please re-enter",
   "Not a valid cellphone number, please re-enter": "Not a valid cellphone number, please re-enter",
   "The phone number has been registered, please login directly": "The phone number has been registered, please login directly",
-  "The phone number is not registered, please register first": "The phone number is not registered, please register first"
+  "The phone number is not registered, please register first": "The phone number is not registered, please register first",
+  "Please keep and enable at least one authenticator": "Please keep and enable at least one authenticator"
 }
