--- a/packages/plugins/@nocobase/plugin-locale-tester/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-locale-tester/src/locale/en-US.json
@@ -1,5 +1,5 @@
 {
-  "Locale": "Locale",
+  "Translations": "Translations",
   "Locale tester": "Locale tester",
   "Please go to <a target=\"_blank\" href=\"https://github.com/nocobase/locales\">nocobase/locales</a> to get the language file that needs translation, then paste it below and provide the translation.": "Please go to <a target=\"_blank\" href=\"https://github.com/nocobase/locales\">nocobase/locales</a> to get the language file that needs translation, then paste it below and provide the translation."
 }
