--- a/packages/plugins/@nocobase/plugin-snapshot-field/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-snapshot-field/src/locale/en-US.json
@@ -1,11 +1,13 @@
 {
   "Detail": "Detail",
   "Snapshot": "Snapshot",
-  "View record": "View record",
   "Add block": "Add block",
+  "When adding a new record, create a snapshot for its relational record and save in the new record. The snapshot will not be updated when the relational record is updated.": "When adding a new record, create a snapshot for its relational record and save in the new record. The snapshot will not be updated when the relational record is updated.",
+  "View record": "View record",
   "Allow linking to multiple records": "Allow linking to multiple records",
-  "When adding a new record, create a snapshot for its relational record and save in the current record. The snapshot is not updated when the record is subsequently updated.": "When adding a new record, create a snapshot for its relational record and save in the current record. The snapshot is not updated when the record is subsequently updated.",
   "The association field to snapshot": "The association field to snapshot",
   "Snapshot the snapshot's association fields": "Snapshot the snapshot's association fields",
-  "Please select": "Please select"
+  "Please select": "Please select",
+  "When a record is created, association data is backed up in a snapshot": "When a record is created, association data is backed up in a snapshot",
+  "Snapshot data": "Snapshot data"
 }
