feat: upload attachments

--- a/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
@@ -70,5 +70,6 @@
   "Delete conversation": "Delete conversation",
   "Deleted successfully": "Deleted successfully",
   "Rename conversation": "Rename conversation",
-  "Use skill": "Use skill"
+  "Use skill": "Use skill",
+  "Upload attachments": "Upload attachments"
 }
