--- a/packages/plugins/@nocobase/plugin-ai/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-ai/src/locale/zh-CN.json
@@ -70,5 +70,6 @@
   "Delete conversation": "删除对话",
   "Deleted successfully": "删除成功",
   "Rename conversation": "重命名对话",
-  "Use skill": "使用技能"
+  "Use skill": "使用技能",
+  "Upload attachments": "上传附件"
 }
