--- a/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-ai/src/locale/en-US.json
@@ -75,5 +75,6 @@
   "Files storage": "Files storage",
   "Files": "Files",
   "Add file": "Add file",
-  "Please select file objects.": "Please select file objects."
+  "Please select file objects.": "Please select file objects.",
+  "Current language": "Current language"
 }
