feat: add zebra stripes support to data table for better readability

--- a/packages/core/client/src/locale/de-DE.json
+++ b/packages/core/client/src/locale/de-DE.json
@@ -116,6 +116,7 @@
   "Filter blocks": "Filterblöcke",
   "Table": "Tabelle",
   "Table OID(Inheritance)": "Tabellen-OID (Vererbung)",
+  "Zebra striping": "Zebra-Striping",
   "Form": "Formular",
   "List": "Liste",
   "Grid Card": "Rasterkarte",
