--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -116,6 +116,7 @@
   "Filter blocks": "Filter blocks",
   "Table": "Table",
   "Table OID(Inheritance)": "Table OID(Inheritance)",
+  "Zebra striping": "Zebra striping",
   "Form": "Form",
   "List": "List",
   "Grid Card": "Grid Card",
