--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -111,6 +111,7 @@
   "Filter blocks": "Bloques de filtro",
   "Table": "Tabla",
   "Table OID(Inheritance)": "Tabla OID(Herencia)",
+  "Zebra striping": "Zebra striping",
   "Form": "Formulario",
   "Collapse": "Colapsar",
   "Select data source": "Seleccionar fuente de datos",
