--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -111,6 +111,7 @@
   "Filter blocks": "Blocs de filtre",
   "Table": "Tableau",
   "Table OID(Inheritance)": "Table OID(Héritage)",
+  "Zebra striping": "Zebra striping",
   "Form": "Formulaire",
   "List": "Liste",
   "Grid Card": "Grille de cartes",
