--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -115,6 +115,7 @@
   "Filter blocks": "Blocchi filtro",
   "Table": "Tabella",
   "Table OID(Inheritance)": "Tabella OID (eredità)",
+  "Zebra striping": "Zebra striping",
   "Form": "Modulo",
   "List": "Elenco",
   "Grid Card": "Scheda griglia",
