--- a/packages/core/client/src/locale/ja-JP.json
+++ b/packages/core/client/src/locale/ja-JP.json
@@ -113,6 +113,7 @@
   "Data blocks": "データブロック",
   "Filter blocks": "フィルターブロック",
   "Table OID(Inheritance)": "データテーブルOID(継承)",
+  "Zebra striping": "Zebra striping",
   "Table": "テーブル",
   "Form": "フォーム",
   "Collapse": "折りたたみ",
