--- a/packages/core/client/src/locale/ko-KR.json
+++ b/packages/core/client/src/locale/ko-KR.json
@@ -147,6 +147,7 @@
   "Desktop device": "데스크톱 기기",
   "Large screen device": "대형 화면 기기",
   "Table OID(Inheritance)": "테이블 OID(상속)",
+  "Zebra striping": "Zebra striping",
   "Collapse": "축소",
   "Select data source": "데이터 소스 선택",
   "Calendar": "캘린더",
