--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -84,6 +84,7 @@
   "Data blocks": "Blocos de dados",
   "Filter blocks": "Blocos de filtro",
   "Table": "Tabela",
+  "Zebra striping": "Zebra striping",
   "Form": "Formulário",
   "Collapse": "Recolher",
   "Select data source": "Selecionar fonte de dados",
