--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -80,6 +80,7 @@
   "Data blocks": "Блоки данных",
   "Filter blocks": "Просеивающие блоки",
   "Table": "Таблица",
+  "Zebra striping": "Zebra striping",
   "Form": "Форма",
   "Collapse": "Свернуть",
   "Select data source": "Выбрать источник данных",
