--- a/packages/core/client/src/locale/tr-TR.json
+++ b/packages/core/client/src/locale/tr-TR.json
@@ -80,6 +80,7 @@
   "Data blocks": "Veri Blokları",
   "Filter blocks": "Filtre blokları",
   "Table": "Tablo",
+  "Zebra striping": "Zebra striping",
   "Form": "Form",
   "Collapse": "Daralt",
   "Select data source": "Veri kaynağını seç",
