--- a/packages/core/client/src/locale/uk-UA.json
+++ b/packages/core/client/src/locale/uk-UA.json
@@ -111,6 +111,7 @@
   "Filter blocks": "Блоки фільтрів",
   "Table": "Таблиця",
   "Table OID(Inheritance)": "Таблиця OID (спадковість)",
+  "Zebra striping": "Zebra striping",
   "Form": "Форма",
   "List": "Список",
   "Grid Card": "Сітка карток",
