--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -147,6 +147,7 @@
   "Desktop device": "电脑设备",
   "Large screen device": "大屏幕设备",
   "Table OID(Inheritance)": "数据表 OID(继承)",
+  "Zebra striping": "斑马条纹",
   "Collapse": "折叠面板",
   "Select data source": "选择数据源",
   "Calendar": "日历",
