--- a/packages/core/client/src/locale/zh-TW.json
+++ b/packages/core/client/src/locale/zh-TW.json
@@ -147,6 +147,7 @@
   "Desktop device": "電腦裝置",
   "Large screen device": "大螢幕裝置",
   "Table OID(Inheritance)": "資料表 OID (繼承)",
+  "Zebra striping": "斑馬條紋",
   "Collapse": "摺疊",
   "Select data source": "選擇資料來源",
   "Calendar": "日曆",
